========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2017-11-24

  - Silenced annoying warning about file_cache version incompatibility in
    upload-to-sheets.


2017-10-28

  - Fixed bug with identification based on the first line of a file.

  - Fixed bug with 'context' on a directive that's not a transaction.


2017-09-30

  - Fixed a bug in reduction booking that would fail when the units are omitted.


2017-09-17

  - Fixed bug in Balance check, detect when an account does not exist and handle
    it properly.

  - Added bean-difference script, used to reconcile transactions in multiple
    files after a long trip.


2017-09-06

  - Added ABS() implementation to SQL shell for Position and Inventory types.
    See https://groups.google.com/d/msg/beancount/0i4w98LmS6E/JJGOKSB8CQAJ


2017-08-08

  - Accept account name components as numbers only. The grammar safely supports
    this because of the leading semi-colon, all the tests pass, and everything
    runs on my own very large input files.

  - Fixed a failing test with MIME mis-categorization which occurred under
    Ubuntu.


2017-07-25

  - Fixed #181: Support underscores in Python module names for price sources
    (thanks to Stephan Mueller for reporting).


2017-07-23

  - Fixed #179: Scientific notation should never appear in rendered output.


2017-07-02

  - Fixed minor bug with rendering postings with missing numbers.


2017-07-06

  - More changes on #173: use a stringify two-level macro in order to place the
    parser source hash as a string in the source file. Hopefully this should
    also work under MSDEV.


2017-07-05

  - Fixed #173: Added a potential fix for building under MSDEV. Thanks to Alan
    Ray for pointing out a method to build with MSDEV under Windows.


2017-06-25

  - Fixed a minor bug in the tolerance inference code that wouldn't accept a